fix bug where notebook-select was too wide in narrow viewports

--- a/app/assets/stylesheets/note_edit.scss
+++ b/app/assets/stylesheets/note_edit.scss
@@ -27,8 +27,8 @@
     color: #2DBE60;
   }
 
-  span.input-group-addon:first-child {
-    margin-right: -1px;
-    width: auto;
+  #notebooks-form .input-group-addon,
+  #notebooks-form .input-group-btn {
+    width: initial;
   }
 }
